# platform-quality

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PLAN.md  README.md  agent_sources.yaml.example  config.yaml.example  docker-compose.prod.yml  docker-compose.yml
api-demo/: .env.example  Dockerfile  README.md  _init_db.py  _old_dd_test.py.bak  _seed.py  _seed_db.py  _test_backend.py  client.py  docker-compose.yml  otel-collector-config.yaml  pyproject.toml  run.py  seed_datadog.sh  smoke_test.sh  sre_engine.py  test_ai_features.sh  test_real_env.py  test_real_env.sh
api-demo/agents/: __init__.py  ai_self_healing.py  dual_llm.py  langfuse.py  langgraph_pipeline.py  litellm_client.py  mcp_server.py  streaming_handler.py  synthetic_rca.py  tool_budget.py
api-demo/data/: incidents.json  kb_entries.json
api-demo/lib/: __init__.py  embeddings.py  vectordb.py
api-demo/scenarios/: error_tracking.py  incidents.py  logs.py  metrics.py  synthetics.py
api-demo/services/api-gateway/: Dockerfile  app.py  requirements.txt
api-demo/services/demo-ui/: Dockerfile  app.py
api-demo/services/test-runner/: Dockerfile  app.py
api-demo/services/user-service/: Dockerfile  app.py  requirements.txt
api-demo/tests/: conftest.py
api-demo/tests/test_agents/: test_ai_self_healing.py  test_dual_llm.py  test_langfuse.py  test_langgraph_pipeline.py  test_litellm_client.py  test_mcp_server.py  test_streaming.py  test_synthetic_rca.py  test_tool_budget.py
api-demo/tests/test_demo/: test_client.py
api-demo/tests/test_lib/: test_embeddings.py  test_vectordb.py
backend/: .env.example  .env.production.example  Dockerfile  alembic.ini  observai.db.bak  pyproject.toml  pyrightconfig.json
backend/.superpowers/sdd/: task-1-report.md
backend/alembic/: .gitkeep  env.py  script.py.mako
backend/alembic/versions/: 3414e8aa840c_add_incident_resolved_and_environment_.py  6a8f9c1e2d3b_add_pgvector_embedding.py  a1_users_auth.py  a2_runbook_service.py  a3_rca_pipeline.py  b4aa597c6610_initial.py  ce1b3f5a0f6c_add_v4_resolution_tracking_fields.py
backend/app/: main.py
backend/app/admin/: router.py
backend/app/agents/: __init__.py  dual_llm.py  langgraph_pipeline.py  router.py  streaming_handler.py
backend/app/analysis/: agent_service.py  health_agent.py  incident_agent.py  miner.py  rca_agent.py  redaction.py  router.py  self_healing_agent.py  sre_metrics.py
backend/app/auth/: deps.py  rate_limit.py  router.py  schemas.py  service.py
backend/app/core/: config.py  config_loader.py  db.py  gateway_auth.py  logging_config.py
backend/app/datadog/: __init__.py  client.py  filters.py  formatters.py  schemas.py  utils.py  write_guard.py
backend/app/datadog_kit/: __init__.py  agent.py  collector.py  config.py  diagnosis.py  embeddings.py  feedback.py  (+4 more)
backend/tests/: conftest.py  test_health.py
(+168 files in other folders)
