[project]
name = "observai-api-demo"
version = "0.1.0"
description = "ObservAI API Demo — Datadog telemetry lab + AI/Agents playground"
requires-python = ">=3.11,<3.14"
dependencies = [
    "httpx>=0.27.0,<1",
    "litellm>=1.50.0,<2",
    "langgraph>=0.3.0,<1",
    "langchain-core>=0.3.0,<1",
    "langchain-openai>=0.3.0,<1",
    "langchain-community>=0.3.0,<1",
    "mcp>=1.2.0,<2",
    "openai>=1.55.0,<2",
    "numpy>=2.0.0,<3",
    "langfuse>=2.0.0,<3",
    "sse-starlette>=2.0.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.24.0,<1",
    "pytest-cov>=5.0.0,<6",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "lib*", "tests*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4", "TCH"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
