[project]
name = "observai"
version = "0.1.0"
description = "Open-source observability platform powered by Datadog API"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.30.0,<1",
    "sqlalchemy[asyncio]>=2.0.0,<3",
    "asyncpg>=0.29.0,<1",
    "alembic>=1.13.0,<2",
    "pydantic>=2.0.0,<3",
    "pydantic-settings>=2.0.0,<3",
    "datadog-api-client>=2.0.0,<3",
    "httpx>=0.27.0,<1",
    "python-jose[cryptography]>=3.3.0,<4",
    "passlib[bcrypt]>=1.7.4,<2",
    "python-multipart>=0.0.9,<1",
    "redis>=5.0.0,<6",
    "celery>=5.3.0,<6",
    "sentry-sdk>=2.0.0,<3",
    "gunicorn>=22.0.0,<23",
    "tenacity>=8.0.0,<9",
    "pytz>=2024.0,<2025",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.24.0,<1",
    "pytest-cov>=5.0.0,<6",
    "httpx>=0.27.0,<1",
    "ruff>=0.6.0,<1",
    "mypy>=1.11.0,<2",
    "pre-commit>=3.5.0,<4",
    "factory-boy>=3.3.0,<4",
    "aresponses>=3.0.0,<4",
    "aiosqlite>=0.20.0,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4", "TCH"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that need external services",
    "datadog: marks tests that need Datadog API access",
]
